--- a/sexay.css
+++ b/sexay.css
@@ -65,11 +65,11 @@ html {
         transition: background-color .25s ease-in-out;
         -moz-transition: background-color .25s ease-in-out;
         -webkit-transition: background-color .25s ease-in-out;
-        border-bottom: solid 2px #F74F48;
+        border-bottom: solid 2px #009933;
     }
 
 .red:hover {
-    background-color: #F74F48;
+    background-color: #009933;
     box-shadow: 0px 0px 5px #fff;
     transition: box-shadow .25s ease-in-out;
     -moz-transition: box-shadow .25s ease-in-out;
